Rrquested changes were made: overflow, inline-block spacing, labelable elements, new block addition behaviour were fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,8 @@ body {
 nav {
     display: block;
     float: right;
-    height: 110px;
+    width: 836px;
+    font-size: 0px;
 }
 
 nav li {
@@ -118,6 +119,7 @@ nav a:hover {
 }
 
 .social-icons {
+    font-size: 0;
     display: block;
     float: right;
     height: 110px;
@@ -181,6 +183,7 @@ section {
 }
 
 .promo .row-container {
+    font-size: 0;
     padding-left: 140px;
     padding-right: 140px;
     text-align: center;
@@ -361,6 +364,14 @@ p {
 
 .ingridients .description-section {
     float: right;
+    font-size: 0;
+}
+
+.ingridients .description-section p,
+.about .description-section p
+{
+    height:   120px;
+    overflow: hidden;  
 }
 
 .ingridients .description-section img {
@@ -380,7 +391,6 @@ p {
 }
 
 .menu {
-    height: 994px;
     box-shadow: inset 0 0 75px rgba(0, 0, 0, 0.13);
     background:linear-gradient(to left, rgba(0, 0, 0, 0) 25%, rgba(82, 82, 82, 0.1)), 
                 url(../images/pattern-five-angles.png);
@@ -516,6 +526,8 @@ p {
     word-spacing: 2px;
     line-height: 45px;
     text-indent: 3px;
+    height: 223px;
+    overflow: hidden;
 }
 
 .reviews .description-section blockquote cite {
@@ -565,6 +577,11 @@ p {
  margin-bottom: 12px;
 }
 
+.reservations .description-section-alt .text-container {
+    height: 152px;
+    overflow: hidden;
+   }
+
 .reservations img {
     display: block;
     float: left;
@@ -586,7 +603,6 @@ form fieldset {
 form label{
     display: block;
     float: left;
-    text-align: left;
     margin-bottom: 28px;
 }
 
@@ -599,12 +615,13 @@ form label:nth-of-type(2n){
 form .input-title {
     color: #dda200;
     font-size: 14px;
-    margin-bottom: 6px;
+    font-weight: 700;
 }
 
 form .input-field {
     display: block;
     margin: 0 auto;
+    margin-top: 6px;
     width: 200px;
     background:rgba(253, 253, 253, 0.7);
     height: 36px;
@@ -614,6 +631,7 @@ form .input-field {
 
 form .input-group {
     display: flex;
+    margin-top: 6px;    
     position: relative;
 }
 
@@ -683,7 +701,7 @@ form input[type="submit"] {
     display: inline-block;
     vertical-align: top;
     padding: 0;
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
     margin-right: 30px;
     width: 370px;
     height: 218px;
@@ -692,6 +710,8 @@ form input[type="submit"] {
 
 .main-footer .description-section p {
     font-size: 17px;
+    max-height: 117px;
+    overflow: hidden;
 }
 
 .main-footer .description-section:last-of-type {
@@ -724,6 +744,7 @@ form input[type="submit"] {
     margin: 0 auto;
     height: 110px;
     padding: 50px 0px 40px 0; 
+    font-size: 0px;
 }
 
 .cards a {
